#18 fix docs